[gd_scene load_steps=25 format=3 uid="uid://covmdy2awgcjk"]

[ext_resource type="Texture2D" uid="uid://bvsjmebi7s085" path="res://assets/GhostEnemySprites/spritesheet (3).png" id="1_7h6ia"]
[ext_resource type="Script" path="res://scripts/ghostenemy.gd" id="1_a4juu"]
[ext_resource type="AudioStream" uid="uid://37ktac268dah" path="res://assets/audio/d0-meatslap-on-glass-2-86735.mp3" id="3_4t1li"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jdgdt"]
radius = 39.0
height = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yn2by"]
bg_color = Color(0.363027, 0.0646058, 0.0949216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5g06s"]
bg_color = Color(0.135311, 0.293964, 0.146229, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rmdey"]
radius = 69.0
height = 164.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k1cey"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s6s3d"]
animation = &"walkL"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t47ko"]
animation = &"walkR"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jdtac"]
animation = &"walkB"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xrnrd"]
animation = &"walkF"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1c50n"]
blend_point_0/node = SubResource("AnimationNodeAnimation_s6s3d")
blend_point_0/pos = Vector2(-0.8, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_t47ko")
blend_point_1/pos = Vector2(0.8, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_jdtac")
blend_point_2/pos = Vector2(0, -0.6)
blend_point_3/node = SubResource("AnimationNodeAnimation_xrnrd")
blend_point_3/pos = Vector2(0, 0.6)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gcudo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7x3go"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hkqus"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hs608"]
states/attack/node = SubResource("AnimationNodeAnimation_k1cey")
states/attack/position = Vector2(565, 100)
states/movement/node = SubResource("AnimationNodeBlendSpace2D_1c50n")
states/movement/position = Vector2(364, 100)
transitions = ["Start", "movement", SubResource("AnimationNodeStateMachineTransition_gcudo"), "movement", "attack", SubResource("AnimationNodeStateMachineTransition_7x3go"), "attack", "movement", SubResource("AnimationNodeStateMachineTransition_hkqus")]

[sub_resource type="Animation" id="Animation_lucj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.35, 0.35)]
}

[sub_resource type="Animation" id="Animation_v4mcj"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.35, 0.35), Vector2(0.5, 0.5), Vector2(0.35, 0.35), Vector2(0.5, 0.5), Vector2(0.35, 0.35)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_imoxl"]
resource_name = "walkB"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_tkoqa"]
resource_name = "walkF"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_xre2d"]
resource_name = "walkL"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g6l3m"]
resource_name = "walkR"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3kk3t"]
_data = {
"RESET": SubResource("Animation_lucj4"),
"attack": SubResource("Animation_v4mcj"),
"walkB": SubResource("Animation_imoxl"),
"walkF": SubResource("Animation_tkoqa"),
"walkL": SubResource("Animation_xre2d"),
"walkR": SubResource("Animation_g6l3m")
}

[node name="GhostEnemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_a4juu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.35, 0.35)
texture = ExtResource("1_7h6ia")
flip_h = true
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_jdgdt")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -50.0
offset_top = -68.0
offset_right = 51.0
offset_bottom = -55.0
theme_override_styles/background = SubResource("StyleBoxFlat_yn2by")
theme_override_styles/fill = SubResource("StyleBoxFlat_5g06s")
value = 100.0
show_percentage = false

[node name="ColorRect" type="ColorRect" parent="HealthBar"]
z_index = -1
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 103.0
offset_bottom = 15.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_rmdey")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_hs608")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/movement/blend_position = Vector2(0.620032, 0.0530974)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3kk3t")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4t1li")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
